k8/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rdicidr
  namespace: production
  labels:
    app: rdicidr
spec:
  serviceName: rdicidr-headless
  replicas: 3
  selector:
    matchLabels:
      app: rdicidr
  template:
    metadata:
      labels:
        app: rdicidr
    spec:
      containers:
      - name: web
        image: rdicidr:0.1.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet: { path: /, port: 8080 }
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /, port: 8080 }
          initialDelaySeconds: 15
          periodSeconds: 15
