k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-headless
  namespace: production
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: web
  clusterIP: None
  selector:
    app: rdicidr
---
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-svc
  namespace: production
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: rdicidr
  type: ClusterIP
## TODO: Complete the rest
